changed setting for rabbit hostname

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 9003
 spring:
   rabbitmq:
-    host: localhost
+    host: ${RABBIT_URI:localhost}
     port: 5672
     username: user
     password: password
